===================================
Tortuga Changelog
===================================

Version 1.0.4
-----------------------------------
[added] extra setting to display tagline in header area

Version 1.0.3
-----------------------------------
[fixed] broken two column post layout in Internet Explorer

Version 1.0.2
-----------------------------------
[added] support for new custom logo feature from WordPress 4.5
[added] setting to hide site title
[added] version numbers to wp_enqueue_style and wp_enqueue_script functions
[updated] flexlider, html5shiv and Genericons

Version 1.0.1
-----------------------------------
[fixed] styling of gallery items

Version 1.0
-----------------------------------
[added] Magazine Homepage template
[added] two column post layout
[added] post slider

Version 0.9
-----------------------------------
Initial Release