@@ -115,20 +115,40 @@ html {
 	box-sizing: inherit;
 }
 
-body {
-	background: #fff; /* Fallback for when there is no custom background color defined. */
+blockquote {
+	margin: 0 0 1.5em;
+	border: 1px solid #ddd;
+	border-left: 3px solid #dd5533;
+	padding: 0.05em 1.25em 1em;
+	font-size: 18px;
+	font-size: 1.125rem;
+	font-style: italic;
+	color: #777;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-	content: "";
+blockquote cite,
+blockquote small {
+	margin-top: 1em;
+	display: block;
+	font-size: 16px;
+	font-size: 1rem;
+	line-height: 1.75;
+	color: #404040;
 }
 
-blockquote,
-q {
-	quotes: "" "";
+blockquote cite:before,
+blockquote small:before {
+	content: "\2014\00a0";
+}
+
+blockquote em,
+blockquote i,
+blockquote cite {
+	font-style: normal;
+}
+
+blockquote > :last-child {
+	margin-bottom: 0.5em;
 }
 
 hr {
@@ -140,7 +160,8 @@ hr {
 
 ul,
 ol {
-	margin: 0 0 1.5em 3em;
+	margin: 0 0 1.5em;
+	padding: 0 0 0 1.25em;
 }
 
 ul {
@@ -162,7 +183,7 @@ dt {
 }
 
 dd {
-	margin: 0 1.5em 1.5em;
+	margin: 0 0 1.5em;
 }
 
 img {
@@ -172,7 +193,15 @@ img {
 
 table {
 	margin: 0 0 1.5em;
+	border: none;
+	table-layout: fixed;
 	width: 100%;
+}
+
+th,
+td {
+	border: 1px solid #ddd;
+	padding: 0.3em 0.6em;
 }
 
 a {
